...
    <string name="Back">Back</string>
    <string name="Edit_Data">Edit Data</string>
    <string name="Enter_instruments_here">Enter instruments here</string>
    <string name="or_Register_an_account_here">or Register an account here</string>
    <string name="Preferred_Name">Preferred Name</string>
    <string name="Hi">Hi, I am ...</string>
    <string name="Teacher">Teacher</string>
    <string name="Student">Student</string>
    <string name="Select_Role">Select A Role To Continue</string>
    <string name="have_account">Already have an account? Login here</string>
    <string name="experience">I have experience ...</string>
    <string name="Sending">Sending a text message</string>
    <string name="Phone">Making a Phone call</string>
    <string name="Zoom">Joining a Zoom call</string>
    <string name="Schedule_Zoom">Schedule a Zoom call</string>
    <string name="Watching_YouTube">Watching a YouTube video</string>
    <string name="Uploading_YouTube">Uploading a YouTube video</string>
    <string name="Finish">Finish</string>
    <string name="Logout">Logout</string>
    <string name="user_preferred_name">Preferred Name</string>
    <string name="user_hi_i_am">Hi, I am ...</string>
    <string name="user_signup_email">Your email (or your parents)</string>
    <string name="user_signup_password">Password</string>
...
